# dndassist

./: pyproject.toml
backup/: room_mk1.py  room_mk2.py
dndassist.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
src/dndassist/: attack.py  autoplay.py  autoroll.py  character.py  dialog.py  equipment.json  equipment.py  equipment_categories.json  equipment_custom.json  game_engine.py  gates.py  interaction.py  isometric_renderer.py  level_up.py  matrix_utils.py  room.py  spellcasting.py  spells.json  storyprint.py  tactical3dmap.py  tactical3dmap_plotly.py  themes.py
src/dndassist.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dndassist/themes/: forest.yaml  themes.py
test/: HallEchoes.yaml  adventure_log.txt  bridge.map  forest_glade.yaml  forest_theme.yaml  garruk.yaml  garruk_save.yaml  gen_room.py  liora.yaml  liora.yml  liora_save.yml  selra.yaml  selra_save.yaml  test.py  test_engine.py  test_gates.py  test_room.py
test/AnnivNoe/: adventure_log.txt  gates.yaml  main_story.py  players.yaml
test/AnnivNoe/Characters/: dryad.yaml  logger.yaml  logger_chief.yaml  village_elder.yaml  villager.yaml
test/AnnivNoe/Rooms/: dialog_elder.yaml  forest_arena.yaml  forest_bridge.yaml  village_start.yaml
test/AnnivNoe/Saves/: Save_dnd_turn_1.yaml  Save_dnd_turn_2.yaml  Save_dnd_turn_3.yaml  (+4 more)
test/CRIMSON_MOON/: adventure_log.txt  gates.yaml  main_story.py  players.yaml
test/PlayersVharactersResource/: drak.yaml  ereindre.yaml  link.yaml  taelith.yaml
test/SCENARIO_A/: forest_glade.yaml  forest_theme.yaml  liora.yaml  selra.yaml
(+23 files in other folders)
